--- a/heelingminds/templates/navigation.html
+++ b/heelingminds/templates/navigation.html
@@ -4,6 +4,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Heeling Minds</title>
+<link rel="icon" type="image/x-icon" href="{% static './images/favicon3.png'%}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,15 +60,15 @@
                         </li>
                         
                         <li>
-                            <a href="#" alt="1">About us</a>
+                            <a href="#aboutus" alt="1">About us</a>
                             
                         </li>
                         <li>
-                          <a href="#" alt="1">Testimonials</a>
+                          <a href="#testimonials" alt="1">Testimonials</a>
                          
                       </li>
                       <li>
-                        <a href="#" alt="1">Contact us</a>
+                        <a href="https://wa.me/919898989898" alt="1">Contact us</a>
                         
                     </li>
                 
