--- a/heelingminds/templates/therapy.html
+++ b/heelingminds/templates/therapy.html
@@ -1,4 +1,4 @@
-
+{% include 'navigation.html'%}
 {% load static %}
 
 
@@ -39,43 +39,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700&subset=latin-ext" rel="stylesheet">
-<div id="nav">
-  <div class="contained">
-      <div id="logo">
-          <img src="{% static 'images/logo.png'%}" class="mmlogo">
-      </div>
-      <div class="container4">
-          <div id="hamburger"><span></span><span></span><span></span></div>
-          <div id="close"><span></span></div>
-          <div id="menuWrapper">
-              <ul>
-                  
-                  <li>
-                      <a href="{% url 'index'%}" alt="1">Home</a>
-                      
-                  </li>
-                  
-                  <li>
-                      <a href="#aboutus" alt="1">About us</a>
-                      
-                  </li>
-                  <li>
-                    <a href="#testimonials" alt="1">Testimonials</a>
-                   
-                </li>
-                <li>
-                  <a href="https://wa.me/919898989898" alt="1">Contact us</a>
-                  
-              </li>
-          
-                  
-                  <a href="{% url 'therapy'%}">
-                  <button class="book"> Book your session</button></a>
-              </ul>
-          </div>
-      </div>
-  </div>
-</div>
+
 <div class="container">  
     <form id="contact" action="{% url 'payment'%}" method="post">
       {% csrf_token %}
@@ -107,14 +71,14 @@
               <option value="anxiety">Anxiety</option>
               <option value="depression">Depression</option>
               <option value="stress">Stress</option>
+              
               <option value="eating-disorder">Eating-disorder</option>
+              <option value="Health Problems">Health Problems</option>
               <option value="any other">Any other</option>
               
             </select>
           </fieldset>
-          <fieldset>
-            <textarea name="message" placeholder="Type your message here...." tabindex="5" required></textarea>
-          </fieldset>
+      
           <fieldset>
             <a href="{% url 'payment'%}">
             <button name="submit" type="submit">Submit</button></a>
