--- a/heelingminds/static/navigation.css
+++ b/heelingminds/static/navigation.css
@@ -1,10 +1,11 @@
 #nav {
-	position: relative;
-   ;
+    position: relative;
     z-index: 100;
     width: 100%;
-    background-color: transparent;
-    height: 3px;
+    background-color: #fff;
+   
+    height: 88px;
+   
 }
 .call-button{
     left: 50px;
@@ -55,18 +56,12 @@ z-index: 100;
 	z-index: 100;
 }
 #nav.fixedbar{
-	background-color: rgba(52, 51, 51, 0.693);
-    height: 70px;
-    width: 100%;
-    left: 0px;
-	top: -2px;
-    align-items: center;
-    
-    margin-bottom: 0px;
-    box-shadow: 0px 0px 6px rgb(0 0 0 / 25%);
+	
     position: fixed !important;
-    color: #373737;
+    top: -2px;
+  
 }
+
 
 .social-icons{
     color: #fff;
@@ -77,38 +72,31 @@ z-index: 100;
 
 .contained {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1139px;
     margin: 0 auto;
-	padding-top:24px;
+    padding-top: 12px;
 }
-.book{
+.book {
     text-decoration: none;
-    /* text-transform: uppercase; */
-    font-size: 20px;
-    font-family: 'League Spartan';
-    background-color: #26ace2;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: 'Quicksand';
+    background-color: #1967D2;
     color: #fff;
     border: none;
     height: 45px;
-    width: 209px;
-    left: 172px;
-    top: -3px;
-    padding: -9px -18px;
-    border-radius: 20px;
+    width: 195px;
+    left: 20px;
+    top: -1px;
+    padding: 10px;
+    border-radius: 5px;
     position: relative;
 }
 .mmlogo{
 	width: 139px;
     
     height: 139px;
-}
-.mmlogo.fixedbar{
-	width: 100px;
-	height: 105px;
-	position: relative;
-    top: -16px;
-    left: 20px;
-
 }
 
 #logo {
@@ -148,11 +136,11 @@ z-index: 100;
     position: relative;
 }
 #nav #menuWrapper {
-	height: auto;
+    height: auto;
     display: block;
     position: relative;
-	top: -31px;
-    left: 28px;
+    top: -31px;
+    left: 181px;
     font-family: 'League Spartan';
 }
 #nav ul {
@@ -174,9 +162,10 @@ z-index: 100;
 }
 #nav ul > li > a {
     display: block;
-    color: #fff;
+    color: #193555;
+    font-family: 'Quicksand';
     font-weight: bold;
-    font-size: 18px;
+    font-size: 15px;
     text-transform: uppercase;
     text-decoration: none;
     border-bottom: 2px solid transparent;
@@ -185,7 +174,7 @@ z-index: 100;
     -ms-transition: all .3s ease;
     -o-transition: all .3s ease;
     transition: all .3s ease;
-		line-height:45px;
+    line-height: 45px;
 }
 #nav .container4 ul > li > ul {
     position: absolute;
@@ -270,8 +259,7 @@ z-index: 100;
 		pointer-events: auto;
 	}#nav .container4 ul > li > ul .ico:hover, #nav .container4 ul > li > ul a:hover { background-color: rgba(0,0,0,0.3); }#nav .container4 ul > li:hover ul { top :45px; }
 	#nav ul li:hover a { 
-		color: #fff;
-		border-bottom: 2px solid #26ace2;
+		color: #1967D2;
 	}
 /* A non image based mobile menu and close button */
 #hamburger {
@@ -420,9 +408,7 @@ z-index: 100;
     left: -362px;
     font-size: 15px;
 }
-  .contained {
-	padding-top: 5px;
-}
+  
 #nav .contained {
 	height: 50px;
 }
